@@ -2,6 +2,8 @@ Revision history for Marquee
 
 0.26 2013/11/09
   - Refactored static/dinamic dispach logic to serve method.
+  - Changed router api for consistency.
+  - Made unserved route not tot fallback to default route.
 
 0.25 2013/05/31
   - Added SCSS plugin
